[gd_scene load_steps=4 format=3 uid="uid://h1q2778x6ke8"]

[ext_resource type="Script" path="res://scene_manager/scenes/temp/fake_load.gd" id="1_scpa1"]
[ext_resource type="Script" path="res://scene_manager/resource/scene_link.gd" id="2_vta00"]

[sub_resource type="Resource" id="Resource_fevby"]
script = ExtResource("2_vta00")
scene_name = "fail_scene"

[node name="fake_load" type="Node2D" node_paths=PackedStringArray("next_timer", "next_label")]
script = ExtResource("1_scpa1")
next_timer = NodePath("next_timer")
next_scene = SubResource("Resource_fevby")
next_label = NodePath("next")

[node name="next_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="next" type="Label" parent="."]
offset_left = 37.0
offset_top = 72.0
offset_right = 93.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 10
text = "next >>
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="flash_timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[connection signal="timeout" from="next_timer" to="." method="_on_next_timer_timeout"]
[connection signal="timeout" from="flash_timer" to="." method="_on_flash_timer_timeout"]
